terraform/k3s/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthpulse-web
  namespace: healthpulse
  labels:
    app.kubernetes.io/name: healthpulse-web
    app.kubernetes.io/part-of: healthpulse-platform
    app.kubernetes.io/component: web
    environment: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: healthpulse-web
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: healthpulse-web
        app.kubernetes.io/part-of: healthpulse-platform
        app.kubernetes.io/component: web
        environment: dev
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
