terraform/k3s/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthpulse-web
  namespace: healthpulse
  labels:
    app.kubernetes.io/name: healthpulse-web
    app.kubernetes.io/part-of: healthpulse-platform
    app.kubernetes.io/component: web
    environment: dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: healthpulse-web
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
